# informatica

./: .gitignore  cppt  hello.cc  hello.txt  igualdades con funcion.cc  multiplicacion exponencial.cc  pruebas.py  python.py  si.cc  video_downloader.py
1º/1º_cuatri/IB/practicas/practica11/2.rotate/: CMakeLists.txt
1º/1º_cuatri/IB/practicas/practica11/3.CreateFiles/: CMakeLists.txt
1º/2º_cuatri/AyED/1practica/main_rational_t/: CMakeLists.txt  main_rational_t.cpp  rational_t.cpp  rational_t.hpp
1º_cuatri/IB/: igualdades con funcion.cc
2º cuatri/opti/: a.out  grafo.cpp  grafo.h  main.cpp
2º_cuatri/opti/: Makefile  a.out  grafo modi.cc  grafo.cpp  grafo.h  grafo8.gr  main
CalculoDependenciaLineal/: CalculoDependenciaLineal.cc  DependenciaLineal.cc
IB/CalculoDependenciaLineal/: CMakeLists.txt  DependenciaLineal.h
PrincComp/p1/: if.s  while.s
examen enero IB/: Car.cc  Car.h  MainCar.cc
examen junio IB/: MainBox.cc  UpperLower.cc
functionsExample/: Makefile  functions.cc  functions.h  functionsExample.cc
jutge/alternatives/: P15613.cc  P56118.cc
jutge/alternatives-iterations/: P61634_leap_year.cc  P90615.cc  general.cc
jutge/arrays/: P50497_is_it_a_palindrome.cc  P78548_Reversing_words(1).cc  a.out
jutge/first programs/: P48107 .cc  P70955.cc  general.cc
jutge/funciones2/: P32954_Sort_three.cc  P99541_Print_a_line.cc
jutge/functions/: P37760_sin_cos.cc  P73231_Maximum_four_integer_numbers.cc  P96564_least_common_multiple.cc
jutge/iterations/: P35080_Squares_4.cc  P39359_squares3.cc  P42280_chess_borad1.cc  P61061_product_of_digits.cc
jutge/secuencias/: -P12061_Words_between_two_words.cc  P27411_I-th_(2).cc  P50095_Next_prime_number.cc  P89851_Which_is_missing.cc
mandar/: P59539_sum_of_n-harmonic_numbers.cc  P90615_print_the_higher_number.cc  P97156.cc  P98960_change_lowercase_uppercase.cc
practicas/practica06/: P97156_print_number_between_both.cc
practicas/practica12/ib-2023-2024-p12-intro-oop-Dario-regalado/practica-casa/Complex/: CMakeLists.txt
proyect_maker/: Makefile  README.md  class_file.txt  implementation_file.txt  main_file.txt  proyect_make
proyect_maker/src/: main.cc
raylib/: w64devkit.exe - Shortcut.lnk
raylib/TTT/: Makefile
raylib/apuestas/: Makefile
(+738 files in other folders)
